Database entities added
All entities added and working

--- a/proiect/BugTracker/BugTracker.Domain/BugTracker.Domain.csproj
+++ b/proiect/BugTracker/BugTracker.Domain/BugTracker.Domain.csproj
@@ -30,6 +30,12 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="EntityFramework">
+      <HintPath>..\packages\EntityFramework.6.1.0\lib\net45\EntityFramework.dll</HintPath>
+    </Reference>
+    <Reference Include="EntityFramework.SqlServer">
+      <HintPath>..\packages\EntityFramework.6.1.0\lib\net45\EntityFramework.SqlServer.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
@@ -41,10 +47,24 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Abstract\IRepository.cs" />
+    <Compile Include="Concrete\BugTrackerDBContext.cs" />
+    <Compile Include="Concrete\BugTrackerRepository.cs" />
+    <Compile Include="Entities\Comment.cs" />
+    <Compile Include="Entities\Issue.cs" />
+    <Compile Include="Entities\Milestone.cs" />
+    <Compile Include="Entities\Person.cs" />
+    <Compile Include="Entities\Project.cs" />
+    <Compile Include="Entities\Tag.cs" />
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <WCFMetadata Include="Service References\" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="App.config" />
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
