--- a/proiect/BugTracker/packages/repositories.config
+++ b/proiect/BugTracker/packages/repositories.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
+  <repository path="..\BugTracker.Domain\packages.config" />
   <repository path="..\BugTracker.WebUI\packages.config" />
 </repositories>
