create project + user functionalities added

--- a/proiect/BugTracker/BugTracker.WebUI/Web.config
+++ b/proiect/BugTracker/BugTracker.WebUI/Web.config
@@ -22,6 +22,13 @@
     <compilation debug="true" targetFramework="4.5" />
     <httpRuntime targetFramework="4.5" />
   </system.web>
+  <system.net>
+    <mailSettings>
+      <smtp from="bugtrackerapp@gmail.com" deliveryMethod="Network">
+        <network host="smtp.gmail.com" port="587" userName="bugtrackerapp@gmail.com" password="bugpassword" enableSsl="true"/>
+      </smtp>
+    </mailSettings>
+  </system.net>
   <system.webServer>
     <modules>
       <remove name="FormsAuthenticationModule" />
