--- a/proiect/BugTracker/BugTracker.WebUI/BugTracker.WebUI.csproj
+++ b/proiect/BugTracker/BugTracker.WebUI/BugTracker.WebUI.csproj
@@ -169,11 +169,15 @@
     <Compile Include="Controllers\AccountController-generated.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\MilestoneController.cs" />
+    <Compile Include="Controllers\ProjectController.cs" />
+    <Compile Include="Controllers\UserController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Infrastructure\NinjectControllerFactory.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
+    <Compile Include="Models\UserViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
@@ -181,6 +185,7 @@
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\Colorgraph.css" />
+    <Content Include="Content\datepicker.css" />
     <Content Include="Content\fonts\themify.svg" />
     <Content Include="Content\themify-icons.css" />
     <Content Include="favicon.ico" />
@@ -203,6 +208,7 @@
     <Content Include="Scripts\jquery.validate.min.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.min.js" />
+    <Content Include="Scripts\misc\bootstrap-datepicker.js" />
     <Content Include="Scripts\misc\Button-checkbox.js" />
     <Content Include="Scripts\modernizr-2.6.2.js" />
     <Content Include="Scripts\respond.js" />
@@ -238,6 +244,9 @@
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
     <Content Include="Views\Account\Login.cshtml" />
     <Content Include="Views\Account\Register.cshtml" />
+    <Content Include="Views\Project\Create.cshtml" />
+    <Content Include="Views\User\Add.cshtml" />
+    <Content Include="Views\Milestone\Create.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
