--- a/proiect/BugTracker/BugTracker.WebUI/Web.config
+++ b/proiect/BugTracker/BugTracker.WebUI/Web.config
@@ -5,9 +5,9 @@
   -->
 <configuration>
   <configSections>
-    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+    
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-  </configSections>
+  <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
   <connectionStrings>
     <add name="BugTrackerDBContext" connectionString="Data Source=IOANA-PC;Initial Catalog=BugTracker;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
@@ -25,7 +25,7 @@
   <system.net>
     <mailSettings>
       <smtp from="bugtrackerapp@gmail.com" deliveryMethod="Network">
-        <network host="smtp.gmail.com" port="587" userName="bugtrackerapp@gmail.com" password="bugpassword" enableSsl="true"/>
+        <network host="smtp.gmail.com" port="587" userName="bugtrackerapp@gmail.com" password="bugpassword" enableSsl="true" />
       </smtp>
     </mailSettings>
   </system.net>
