--- a/proiect/BugTracker/BugTracker.Domain/App.config
+++ b/proiect/BugTracker/BugTracker.Domain/App.config
@@ -14,7 +14,7 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
-  <connectionStrings>
+  <!--<connectionStrings>
     <add name="BugTrackerDBContext" connectionString="Data Source=IOANA-PC;Initial Catalog=BugTracker;Integrated Security=True" providerName="System.Data.SqlClient" />
-  </connectionStrings>
+  </connectionStrings>-->
 </configuration>
